# sbpl_manipulation

./: README.md
bfs3d/: CMakeLists.txt  manifest.xml
bfs3d/include/bfs3d/: BFS_3D.h  BFS_Util.h
bfs3d/src/: BFS_3D.cpp  BFS_Util.cpp  Search.cpp  test_bfs.cpp
sbpl_arm_planner/: CMakeLists.txt  manifest.xml
sbpl_arm_planner/config/: hdt_arm.yaml  params.cfg  pr2.mprim  pr2_arm0.yaml  pr2_arm1.yaml  pr2_arm2.yaml  pr2_arm3.yaml  pr2_left_arm.cfg  pr2_left_arm.yaml  pr2_right_arm.cfg  pr2_right_arm.yaml  ubr1.yaml
sbpl_arm_planner/include/sbpl_arm_planner/: action_set.h  collision_checker.h  environment_cartrobarm3d.h  environment_robarm3d.h  planning_params.h  sbpl_arm_model.h  sbpl_arm_planner_interface.h  sbpl_arm_planner_params.h  sbpl_arm_planning_error_codes.h  sbpl_kdl_kinematic_model.h  sbpl_kinematic_model.h  utils.h
sbpl_arm_planner/include/sbpl_arm_planner/pr2/: orientation_solver.h
sbpl_arm_planner/src/: action_set.cpp  bfs_3d.cpp  environment_cartrobarm3d.cpp  environment_robarm3d.cpp  environment_statistics.cpp  planning_params.cpp  sbpl_arm_model.cpp  sbpl_arm_planner_interface.cpp  sbpl_arm_planner_params.cpp  sbpl_geometry_utils.cpp  sbpl_kdl_kinematic_model.cpp  sbpl_kinematic_model.cpp
sbpl_arm_planner/src/pr2/: orientation_solver.cpp
sbpl_arm_planner_test/: CMakeLists.txt  manifest.xml
sbpl_arm_planner_test/env/: tabletop.env  tabletop_hdt.env  tabletop_ubr1.env
sbpl_arm_planner_test/experiments/: baxter_goal.yaml  hdt_goal.yaml  pr2_goal.yaml  ubr1_goal.yaml
sbpl_arm_planner_test/launch/: goal_hdt.launch  goal_pr2.launch  goal_ubr1.launch
sbpl_arm_planner_test/src/: call_planner.cpp
sbpl_collision_checking/: CMakeLists.txt  README.md  manifest.xml
sbpl_collision_checking/config/: baxter_left_arm_model.yaml  collision_config.yaml  hdt_arm.yaml  pr2_2_arms_model.yaml  pr2_3_arms_body_model.yaml  pr2_3_arms_model.yaml  pr2_4_arms_body_model.yaml  pr2_4_arms_model.yaml  pr2_arm0_voxel_2arm_model.yaml  pr2_arm0_voxel_3arm_model.yaml  pr2_arm0_voxel_model.yaml  pr2_arm1_voxel_2arm_model.yaml  pr2_arm1_voxel_3arm_model.yaml  pr2_arm1_voxel_model.yaml  pr2_arm2_voxel_3arm_model.yaml  pr2_arm2_voxel_model.yaml  pr2_arm3_voxel_model.yaml  pr2_body_model.yaml  pr2_left_arm_model.yaml  pr2_left_arm_voxel_model.yaml  pr2_right_arm_model.yaml  pr2_right_arm_voxel_model.yaml  ubr1_model.yaml
sbpl_collision_checking/include/sbpl_collision_checking/: group.h  sbpl_collision_interface.h  sbpl_collision_model.h  sbpl_collision_space.h  sbpl_collision_statistics.h  test_sbpl_collision_space.h
sbpl_collision_checking/launch/: test_baxter_left_arm.launch  test_collision_checking.launch  test_hdt_arm.launch  test_left_arm.launch  test_pr2_left_arm.launch  test_pr2_right_arm.launch  test_right_arm.launch
sbpl_collision_checking/src/: benchmark_cc.cpp  bresenham.cpp  group.cpp  occupancy_grid.cpp  sbpl_collision_interface.cpp  sbpl_collision_model.cpp  sbpl_collision_space.cpp  sbpl_collision_space_objects.cpp  sbpl_collision_space_visualizations.cpp  sbpl_collision_statistics.cpp  test_collision_checking.cpp  test_collision_model.cpp  test_collision_space.cpp  test_sbpl_collision_space.cpp
sbpl_manipulation_components/: CMakeLists.txt  manifest.xml
sbpl_manipulation_components/include/sbpl_manipulation_components/: collision_checker.h  kdl_robot_model.h  motion_primitive.h  occupancy_grid.h  post_processing.h  robot_model.h  sbpl_kdl_kinematic_model.h  shared_occupancy_grid.h
sbpl_manipulation_components/src/: collision_checker.cpp  kdl_robot_model.cpp  occupancy_grid.cpp  post_processing.cpp  robot_model.cpp  sbpl_kdl_kinematic_model.cpp  sbpl_kinematic_model.cpp  shared_occupancy_grid.cpp  test_kdl_robot_model.cpp
sbpl_manipulation_components_pr2/: CMakeLists.txt  manifest.xml
sbpl_manipulation_components_pr2/include/sbpl_manipulation_components_pr2/: .pr2_kdl_robot_model.h.swp  orientation_solver.h  pr2_action_set.h  pr2_kdl_robot_model.h  ubr1_kdl_robot_model.h
sbpl_manipulation_components_pr2/src/: action_set.cpp  orientation_solver.cpp  pr2_kdl_robot_model.cpp  sbpl_math.cpp  ubr1_kdl_robot_model.cpp
sbpl_single_arm/: manifest.xml
sbpl_single_arm/config/: pr2_both_arms.yaml  pr2_left_arm.yaml
sbpl_single_arm/include/sbpl_arm_planner/: bfs_3d.h  environment_statistics.h  sbpl_arm_planner_params.h  sbpl_geometry_utils.h
sbpl_single_arm/include/sbpl_arm_planner/pr2/: orientation_solver.h  sbpl_math.h
sbpl_single_arm/src/: collision_checker.cpp  environment_robarm3d.cpp  sbpl_arm_planner_params.cpp  utils.cpp
sbpl_single_arm/src/pr2/: orientation_solver.cpp  sbpl_math.cpp
